--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 2.6)
 project(asmstat)
 
-add_executable(asmstat main.cpp)
+add_executable(asmstat main.cc DumpLine.cc Command.cc)
 
+set_property(TARGET asmstat PROPERTY CXX_STANDARD 14)
 install(TARGETS asmstat RUNTIME DESTINATION bin)
